# writeAgent

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  requirements-core.txt  requirements-orchestrator.txt
agent/: __init__.py  __main__.py  checkpointer.py  clarification.py  cli.py  console_view.py  file_tools.py  graph.py  human_input.py  llm_client.py  llm_gateway.py  react_runner.py  skill_runner.py  state.py  state_store.py  trace_store.py  workflow_runner.py
agent_core/: config.py  context.py  factory.py  run_context.py  runtime.py
artifacts/: manifest.py  retrieval.py  schemas.py  summarizer.py
case/: 00-用户原始需求.md  01-论文写作任务书.json  01-论文写作任务书.md  02-文献梳理报告.json  02-文献梳理报告.md
config/: agents.remote.example.yaml  agents.yaml
conversation_history/: 933d8d21-cf13-43c0-9b33-08341f4b8123.md
delegation/: a2a_client.py  agent_config.py  capability_index.py  discovery.py  registry.py  router.py  runtime.py  schema.py
docs/: 00-总体方案与技术路线.md  01-Agent架构设计.md  02-OpenClaw适配方案.md  03-统一输入输出字段规范.md  04-案例主题与执行计划.md  05-Skill开发规范.md
examples/: publish_case_artifacts.py  react_acceptance_scenarios.py  run_skill1_then_skill2.py
frontend/: .env.development  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
middleware/: guardrails.py  human_review.py  trace.py  workflow_gate.py
project_store/: checkpoint.py  ledger.py  project.py  sessions.py  workspace.py
schemas/: format_report.schema.json  literature_report.schema.json  paper_draft.schema.json  paper_outline.schema.json  polish_report.schema.json  state.schema.json  writing_task.schema.json
server/: __init__.py  graph.py  webapp.py
tests/: conftest.py  test_a2a_validator.py  test_academic_formatting_skill.py  (+36 more)
(+243 files in other folders)
