[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "writeagent"
version = "0.2.0"
description = "???? Agent??? Deep Agents ???????"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "writeAgent group" }]

[project.scripts]
writeagent = "agent_core.runtime:main"

[tool.setuptools.packages.find]
include = ["agent_core*", "middleware*", "tools*", "delegation*", "workflows*", "artifacts*", "project_store*", "traces*"]
exclude = ["skill_packs*", "case*", "tests*"]
